--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
     <section id="target"></section>
-    <script src="node_modules/falcor/dist/falcor.browser.min.js" charset="utf-8"></script>
-    <script src="bundle.js" charset="utf-8"></script>
+    <script src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
