--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>React</title>
+    <link rel="stylesheet" href="css/main.css" title="" type="text/css" />
 </head>
 <body>
     <section id="target"></section>
